--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <!-- Main Content -->
 <div class="container mt-5">
   <h2 class="mb-4">Job Opportunity: Social Media Expertise</h2>
+    <p>Please complete the form to apply for the job. <a href="https://forms.gle/SnjEzhFxTot37tah6">Click Here</a></p>
 
 
   <!-- Influencers List -->
